# book_triage_v0.1.0

./: .gitignore  CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  INSTALL_WINDOWS.md  PUBLICATION_READINESS_SUMMARY.md  README.md  compatibility_test_windows.txt  pyproject.toml  quick_start_windows.bat  requirements.txt  sample_books.csv  test_frontend.html  test_installation.py  test_sample.csv  test_sample_fixed.csv
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci-local.yml  ci.yml
book_triage/: __init__.py  __main__.py  api.py  core.py  security.py  vision.py
distributions/linux/: README.md  README_LINUX.txt  install.sh  start.sh
distributions/linux/book_triage/: api.py  cli.py
distributions/linux/scripts/: comprehensive_rps_test.py  create_distributions_simple.py  security_audit.py  start_book_triage.bat  start_book_triage.ps1
distributions/linux/tests/: test_cli.py  test_vision.py  test_vision_fixed.py
distributions/macos/: README_MACOS.txt  install.sh  pyproject.toml
distributions/macos/book_triage/: __main__.py  core.py  security.py
distributions/macos/examples/: README.md  sample_books.csv
distributions/macos/scripts/: chaos_test.py  create_distribution.bat  create_shortcut.bat  rps_test.py  security_audit.py  start_book_triage.ps1  start_simple.bat
distributions/macos/tests/: __init__.py  test_api.py  test_core.py
distributions/windows/: LICENSE  README_WINDOWS.txt  book_triage.bat  install.bat  start.bat
distributions/windows/book_triage/: api.py  cli.py  env_example.txt
distributions/windows/examples/: README.md  sample_books.csv
distributions/windows/scripts/: README.md  chaos_test.py  create_distributions.py  rps_test.py  run_tests.py  simple_chaos.py  start_book_triage.bat
distributions/windows/tests/: test_vision_fixed.py
docs/: DAST_REPORT.md  DAST_SUMMARY.md  DISTRIBUTION_GUIDE.md  GITHUB_SECRETS.md  INSTALL_WINDOWS.md  PERFORMANCE_SUMMARY.md  QUICK_SETUP.md  SECURITY_ANALYSIS.md  SECURITY_CHECKLIST.md  SETUP_INSTRUCTIONS.md  TESTING.md  UML_DOCUMENTATION_SUMMARY.md  UNIT_TEST_SUMMARY.md  URL_UPDATE_SUMMARY.md  quick_start_windows.bat
docs/adr/: 001-data-storage-csv.md  002-web-framework-fastapi.md  003-authentication-http-basic.md  004-security-hardening-approach.md  005-testing-strategy-comprehensive.md  006-cross-platform-distribution.md  007-ci-cd-github-actions.md  008-vision-processing-dual-approach.md  009-rate-limiting-slowapi.md  010-project-structure-modular.md  ADR_SUMMARY.md  README.md
docs/log/logs_41709031492/: 0_secret-scan.txt  1_test.txt  5_notify.txt
docs/log/logs_41709031492/notify/: 1_Set up job.txt  3_Complete job.txt
docs/log/logs_41709031492/secret-scan/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Run gitleaks.txt  6_Post Run actions_checkout@v4.txt  7_Complete job.txt  7_Complete job.txt:Zone.Identifier
docs/log/logs_41709031492/test/: 10_Upload coverage to Codecov.txt  14_Upload failure artifacts.txt  1_Set up job.txt  28_Post Run actions_checkout@v4.txt  29_Complete job.txt  2_Run actions_checkout@v4.txt  3_Set up Python 3.12.txt  4_Cache pip dependencies.txt  5_Install system dependencies.txt  6_Install Python dependencies.txt  7_Create test CSV.txt  8_Set environment variables.txt  9_Run tests with coverage.txt
docs/log/logs_41712406171/: 0_test.txt  1_security.txt
docs/log/logs_41712406171/security/: 11_Post Set up Python.txt  12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  (+3 more)
docs/log/logs_41715040420/: 0_security.txt  1_test.txt
docs/log/logs_41718531266/: 0_secret-scan.txt  1_test.txt  2_quality-gate.txt  5_notify.txt
docs/log/logs_41784594359/: 0_security.txt  1_test.txt
docs/log/logs_41784978501/: 0_security.txt  1_test.txt
docs/log/logs_41787355198/: 0_secret-scan.txt  1_test.txt  5_notify.txt
docs/uml/: README.md  activity-diagrams.md  class-diagram.md  component-diagram.md  deployment-diagram.md  sequence-diagrams.md  use-case-diagram.md
examples/: sample_books.csv
scripts/: README.md  chaos_demo.py  comprehensive_rps_test.py  create_distribution.bat  create_distributions.py  create_distributions_simple.py  performance_test.py  run_tests.py  test_compatibility.py
temp_files/: test_web_interface.html
test_data/: test_sample_backup.csv
tests/: test_api.py  test_core.py  test_core_coverage.py  test_core_simple.py  test_frontend_layout.py  test_indicators_implementation.py  test_layout_basic.py  test_main.py  test_main_module.py  test_scroll_preservation.py  test_security.py  test_sticky_form.py  test_sticky_table_headers.py  test_verified_display_logic.py  test_vision.py
(+112 files in other folders)
